test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-create-on-trigger-deletion-ns
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: pol-create-on-trigger-deletion-ns
data:
  foo: bar
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-create-on-trigger-deletion
  namespace: pol-create-on-trigger-deletion-ns
spec:
  rules:
  - name: default-deny
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          operations:
          - DELETE
    generate:
      apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      name: default-deny
      namespace: pol-create-on-trigger-deletion-ns
      synchronize: true
      data:
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
