test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: test-org
  namespace: pol-create-on-trigger-deletion-ns
