test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-create-on-trigger-deletion
  namespace: pol-create-on-trigger-deletion-ns
spec:
  concurrent: false
  rules:
  - generate:
      apiVersion: networking.k8s.io/v1
      data:
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
      kind: NetworkPolicy
      name: default-deny
      namespace: pol-create-on-trigger-deletion-ns
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          operations:
          - DELETE
    name: default-deny
