test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-create-on-trigger-deletion
  namespace: pol-create-on-trigger-deletion-ns
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
