test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/chainsaw-step-01-assert-1-2.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace: pol-create-on-trigger-deletion-ns
