test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/chainsaw-step-04-assert-1-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: pol-create-on-trigger-deletion-ns
spec:
  policyTypes:
  - Ingress
  - Egress
