test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/02-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: ConfigMap
      name: test-org
      namespace: pol-create-on-trigger-deletion-ns
