test/conformance/chainsaw/generate/policy/cornercases/pol-data-create-on-trigger-deletion/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-create-on-trigger-deletion
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-create-on-trigger-deletion
        - name: namespace
          value: pol-create-on-trigger-deletion-ns
  - try:
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
  - name: step-02
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: test-org
          namespace: pol-create-on-trigger-deletion-ns
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - assert:
        file: chainsaw-step-04-assert-1-1.yaml
